# ReMyCloud

./: .clangd  .gitignore  .qmlls.ini  CMakeLists.txt  LICENSE  README.md  main.cpp  temp_backend.cpp
.cache/clangd/index/: AsyncLauncher.h.7449C263A5455BB7.idx  Backend.cpp.8557F7F636F89864.idx  Backend.h.A5C4D2A1773778D9.idx  Backend.h.E3DC2A62A7823587.idx  BaseService.h.4304F9354E4CF2F5.idx  Checkable.h.C3596E28A232A360.idx  CloudFileID.h.732A6C2B1333A37D.idx  CloudFileService.h.4CFB03700AE1CCBB.idx  ConstAppConfig.h.BA5BBA8C772EC1C9.idx  DataConfig.h.3AB4531ECC0B6D24.idx  FileID.h.F9B899A54F523438.idx  FileMapping.cpp.543033109E7EAF3E.idx  FileMapping.cpp.E1657641044EB9B2.idx  FileMapping.h.4291999E8192300B.idx  ILocalFileService.h.F4A791B0E40B4C5F.idx  I_AsyncLuncher.h.B8D9777177E975C2.idx  I_Backend.h.61E53814880DB51F.idx  I_CloudFileService.h.69436D736DB6A478.idx  I_DataConfigLoader.h.C66F770C2166FC4E.idx  I_FileMapping.h.F69C45B76D3D1713.idx  I_Inject.h.ADDF699AC6C92CC2.idx  I_LocalFileService.h.0383BA71B543AB2B.idx  I_LocalFileService.h.D84F93E0B9D8DAF6.idx  I_QmlAdapter.h.DC8E7DF79632E08E.idx  I_ServiceManager.h.B3177BD89F73EA10.idx  Inject.cpp.FAA3DA7619A6FAAC.idx  Inject.h.CD482DE79B9EDFBB.idx  LFS_test.cpp.25C2CCC5553D6316.idx  LFS_test.cpp.934BD18538614326.idx  LFS_test.h.A3E75CA71E419522.idx  LocalFileService.cpp.A6F1667E82FB0DCC.idx  LocalFileService.cpp.EB45885814728274.idx  LocalFileService.h.14360F6CF9603106.idx  LocalFileService.h.1DF52A3F13F5F460.idx  MdHTML.h.B4284194D92838B3.idx  MdHighLight.h.7A2A1BA3592E811C.idx  RMCRelation.h.02EA2801F945645E.idx  ServiceManager.h.45C198513074DE64.idx  Singletons.cpp.AD1630E67B8A5466.idx  Singletons.h.3DB3B7004256F919.idx  (+9 more)
CppTest/: CMakeLists.txt  tst_cpptestmain.cpp
CppTest/include/: FMP_test.h  LFS_test.cpp  LFS_test.h
CppTest/src/: FMP_test.cpp  LFS_test.cpp
QKTest/: CMakeLists.txt  tst_testmain.qml
Test/: CMakeLists.txt  tst_testmain.cpp
classForTest/include/: T_DataConfigLoader.h  T_OpenFileModel.h  T_QmlAdapter.h
classForTest/src/: T_DataConfigLoader.cpp
config/: appConfig.json
include/: CloudFileManager.h  CloudFileService.h  ConstAppConfig.h  DataConfig.h  FileEntityProx.h  QmlAdapter.h  RegisterQml.h  Singletons.h  abstrctFileService.h  backend.h  global.h  init.h  localfileservice.h  rmc_app.h  serviceManager.h
include/application/: AsyncLauncher.h  Backend.h  Inject.h
include/service/: CloudFileManager.h  CloudFileService.h  FileMapping.h  LocalFileService.h  ServiceManager.h
include/service/application/: Backend.h
include/type/: CloudFileID.h  FileID.h  MdHTML.h  MdHighLight.h  RMCRelation.h  TypeOfCloudFileService.h
interface/: Checkable.h  CloudFileService.h  FileEntity.h  ILocalFileService.h  I_CloudFileService.h  I_DataConfigLoader.h  I_LocalFileService.h
interface/adapter/: I_OpendFiles.h  I_QmlAdapter.h  OpendFilesListModel.h
interface/application/: I_AsyncLuncher.h  I_Bacend.h  I_Backend.h  I_Inject.h  I_QmlAdapter.h
interface/service/: BaseService.h  I_AppAndDataConfig.h  I_CloudFileManager.h  I_CloudFileService.h  I_DocumentDepedency.h  I_FileMapping.h  I_LocalFileService.h  I_ReadmeHighlight.h  I_ReadmeToHtml.h  I_ServiceManager.h
qml/: Main.qml  navBar.qml
src/: FileMapping.cpp  Singletons.cpp  localfileservice.cpp
src/application/: Backend.cpp  Inject.cpp
src/service/: CloudFileService.cpp  FileMapping.cpp
